# pergamon

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
apps/ios/: README.md  project.yml
apps/ios/HostSmoke/: main.swift
apps/ios/PergamonKit/: Package.swift
apps/ios/PergamonKit/Sources/PergamonKit/: Conveniences.swift  Exports.swift
apps/ios/PergamonKit/Tests/PergamonKitTests/: PergamonKitTests.swift
apps/ios/PergamonSpike/: DetailView.swift  InboxView.swift  PergamonSpikeApp.swift  Presentation.swift
apps/obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
apps/obsidian-plugin/src/: browse-modal.ts  data-bridge.ts  insert-modal.ts  main.ts  settings.ts  types.ts
crates/pergamon-cli/: Cargo.toml
crates/pergamon-cli/src/: main.rs
crates/pergamon-cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/pergamon-core/: Cargo.toml
crates/pergamon-core/src/: content_type.rs  diagnostics.rs  error.rs  fsrs.rs  lib.rs  model.rs  reading_time.rs  rule.rs  smart_filter.rs  status.rs
crates/pergamon-export/: Cargo.toml
crates/pergamon-export/src/: frontmatter.rs  json.rs  lib.rs  manifest.rs  markdown.rs  obsidian.rs  slug.rs  template.rs
crates/pergamon-extract/: Cargo.toml
crates/pergamon-extract/src/: article.rs  canonical.rs  error.rs  lib.rs  metadata.rs  pdf.rs
crates/pergamon-extract/tests/: KNOWN_LIMITATIONS.md  corpus.rs
crates/pergamon-extract/tests/fixtures/pages/: blockquote-heavy.html  blog-post-sidebar.html  blog-post-simple.html  canonical-url.html  encoded-entities.html  figures-captions.html  foreign-language.html  heavy-navigation.html  iframe-heavy.html  image-heavy.html  inline-styles.html  list-article.html  malformed-html.html  minimal-paragraphs.html  mixed-headings.html  multiple-articles.html  nested-divs.html  news-article.html  newsletter.html  no-article.html  no-metadata.html  og-metadata-rich.html  paywall-truncated.html  recipe-page.html  script-heavy.html  spa-shell.html  table-content.html  tech-blog-code.html  wiki-article.html
crates/pergamon-feed/: Cargo.toml
crates/pergamon-feed/src/: error.rs  lib.rs  opml.rs  parser.rs
crates/pergamon-feed/tests/: corpus.rs
crates/pergamon-feed/tests/fixtures/atom/: blog.xml  categories.xml  github-releases.xml  minimal.xml  multiple-links.xml  xhtml-content.xml
crates/pergamon-feed/tests/fixtures/edge/: long-content.xml  malformed-dates.xml  special-chars.xml  utf8-multibyte.xml
crates/pergamon-feed/tests/fixtures/json/: blog.json  minimal.json  with-attachments.json
crates/pergamon-feed/tests/fixtures/rss/: blog-simple.xml  blog-with-cdata.xml  empty-fields.xml  html-in-title.xml  many-items.xml  minimal.xml  namespaces.xml  news-full.xml  no-dates.xml  no-guid.xml  podcast.xml  relative-urls.xml
crates/pergamon-import/: Cargo.toml
crates/pergamon-import/src/: error.rs  kindle.rs  lib.rs  pocket.rs  raindrop.rs  readwise.rs
crates/pergamon-server/: Cargo.toml
crates/pergamon-server/src/: auth.rs  error.rs  main.rs  pagination.rs  state.rs  util.rs
crates/pergamon-server/src/routes/: admin.rs  collections.rs  feeds.rs  health.rs  highlights.rs  items.rs  mod.rs  notes.rs  review.rs  search.rs  static_assets.rs  stats.rs  tags.rs  web.rs  web_bookmarks.rs  web_collections.rs  web_search.rs  web_tags.rs
crates/pergamon-server/static/: app.css  app.js
crates/pergamon-server/templates/: _highlight_row.html  _item_list.html  _item_row.html  _notes_panel.html  _review_panel.html  _search_results.html  _tags.html  admin.html  base.html  bookmarks.html  collection_detail.html  collections.html  highlights.html  inbox.html  macros.html  notes.html  reader.html  review.html  review_stats.html  search.html  tags.html
crates/pergamon-storage/: Cargo.toml
crates/pergamon-storage/migrations/: V10__content_rules.sql  V11__read_at_column.sql  V12__diagnostics_logs.sql  V1__initial_schema.sql  V2__feed_health_tracking.sql  V3__feed_folders.sql  V4__url_unique_index.sql  V5__bookmark_meta_enrichment.sql  V6__link_health.sql  V7__notes_table.sql  V8__review_cards.sql  V9__smart_collections.sql
crates/pergamon-storage/src/: db.rs  error.rs  lib.rs
crates/pergamon-storage/tests/: round_trip.rs
crates/pergamon-uniffi/: Cargo.toml
crates/pergamon-uniffi/src/: lib.rs
docs/: docker.md  export-format.md  roadmap.md
docs/adr/: 001-zero-io-core-library.md  002-content-type-taxonomy-and-unified-data-model.md  003-feed-parsing-strategy-feed-rs.md  004-content-extraction-readability-ammonia.md  005-spaced-repetition-algorithm-fsrs.md  006-database-schema-and-fts5-strategy.md  007-platform-boundaries.md  008-licensing-apache-20-agpl-30.md  009-clitui-design-and-command-structure.md  010-bookmark-vs-article-unified-content-model.md  016-web-architecture-and-wasm-boundary.md  017-auth-session-model.md  018-docker-deployment.md  019-uniffi-boundary-and-error-mapping.md  020-mobile-storage-ownership-and-cache-policy.md  021-share-extension-ingestion-contract.md  README.md
docs/spikes/: uniffi-ios-findings.md
scripts/: build-ios.sh  smoke-macos.sh
