[workspace]
resolver = "2"
members = [
    "crates/pergamon-core",
    "crates/pergamon-storage",
    "crates/pergamon-feed",
    "crates/pergamon-extract",
    "crates/pergamon-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/kafkade/pergamon"
homepage = "https://github.com/kafkade/pergamon"
authors = ["The pergamon authors"]

# Shared dependency versions. Members opt in via `dep = { workspace = true }`.
[workspace.dependencies]
pergamon-core = { path = "crates/pergamon-core", version = "0.1.0" }
pergamon-storage = { path = "crates/pergamon-storage", version = "0.1.0" }
pergamon-feed = { path = "crates/pergamon-feed", version = "0.1.0" }
pergamon-extract = { path = "crates/pergamon-extract", version = "0.1.0" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7"] }
time = { version = "0.3", default-features = false, features = ["std", "macros", "formatting", "parsing"] }
rusqlite = { version = "0.40", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

# Mandatory lint set. Members opt in with `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
debug = "line-tables-only"
