[workspace]
resolver = "2"
members = [
    "crates/pergamon-core",
    "crates/pergamon-storage",
    "crates/pergamon-feed",
    "crates/pergamon-extract",
    "crates/pergamon-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/kafkade/pergamon"
homepage = "https://github.com/kafkade/pergamon"
authors = ["The pergamon authors"]

# Shared dependency versions. Members opt in via `dep = { workspace = true }`.
[workspace.dependencies]
pergamon-core = { path = "crates/pergamon-core", version = "0.1.0" }
pergamon-storage = { path = "crates/pergamon-storage", version = "0.1.0" }
pergamon-feed = { path = "crates/pergamon-feed", version = "0.1.0" }
pergamon-extract = { path = "crates/pergamon-extract", version = "0.1.0" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
time = { version = "0.3", default-features = false, features = ["std", "macros", "formatting", "parsing", "serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
feed-rs = "2"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
readabilityrs = "0.1"
ammonia = "4"
scraper = "0.22"
url = "2"
lopdf = "0.34"
ratatui = "0.29"
crossterm = "0.28"
open = "5"

# Mandatory lint set. Members opt in with `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
debug = "line-tables-only"
