[package]
name = "pergamon-cli"
description = "Command-line interface for pergamon — unified personal information system."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "pergamon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
pergamon-core = { workspace = true }
pergamon-extract = { workspace = true }
pergamon-feed = { workspace = true }
pergamon-storage = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
