[package]
name = "pergamon-core"
description = "Pure-computation core library for pergamon: domain model, content types, state machine, FSRS engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
