[package]
name = "pergamon-export"
description = "Export formatters for pergamon — Obsidian vault sync, Markdown, JSON."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
pergamon-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
