[package]
name = "pergamon-extract"
description = "Article extraction, HTML sanitization, and PDF text extraction for pergamon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pergamon-core = { workspace = true }
thiserror = { workspace = true }
