[package]
name = "pergamon-server"
description = "Axum-based web server for pergamon — unified personal information system."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "pergamon-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
pergamon-core = { workspace = true }
pergamon-storage = { workspace = true }
pergamon-feed = { workspace = true }
pergamon-extract = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tower = { workspace = true }
