[package]
name = "pergamon-storage"
description = "SQLite + FTS5 storage adapter for pergamon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pergamon-core = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
